@@ -11,6 +11,8 @@ Core rule
 - Any partial signal is treated as `WITHHELD` or `BLOCKED` until verified.
 
 360 gate definition
+0. Docs/update discipline check:
+   - If code/shell/package paths changed, at least one operator-facing doc must be updated in the same working set.
 1. Compile succeeds.
 2. Full test suite succeeds.
 3. Proofcheck succeeds with release fixture coverage.
@@ -43,3 +45,4 @@ Policy
 - No commit intended for reuse should be considered valid until `verify:360` passes.
 - No merge/release should bypass `verify:360`.
 - Host precondition misses must be explicit evidence (`PARTIAL`/`SKIP`) and must not silently drop receipts.
+- Missing docs/update sync for code changes is a gate failure (`VERIFY360_DOC_SYNC_MISSING`).
